--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ add_executable(Hash src/Lab3/HashTest.cpp)
 
 add_executable(Lab4 src/Lab4/BINTREE.cpp)
 add_executable(Lab5 src/Lab5/BINTREE.C src/Lab5/STACKS.C)
-
-
+add_executable(Lab6 src/Lab6/rbtree.c src/Lab6/set_test.c src/Lab6/set.h src/Lab6/set.c)
+add_executable(Lab6_advance src/Lab6_advance/trie.h src/Lab6_advance/trie.c)
 
 
 
